crates/pina_cli/tests/snapshots/cli_snapshots__build_help.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
assertion_line: 146
info:
  program: pina
  args:
    - build
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Build the current Pina program for SBF and generate its IDL.

Discovers the nearest pina.toml or Cargo package, runs the release SBF build, publishes the program at target/deploy/<program>.so, and writes the Codama IDL to target/idl/<program>.json. With --verify, solana-verify performs a deterministic Docker build and Pina records its inputs and hash.

Usage: pina build [OPTIONS]

Options:
  -p, --project <DIR>
          Directory inside the project to discover. Defaults to the current directory

      --features <FEATURE>
          Program features to enable in addition to bpf-entrypoint. Repeat or use commas

      --no-default-features
          Disable the program crate's default features for the SBF build

      --no-lto
          Skip the default fat-LTO link for the deployed program

      --no-size-profile
          Skip the production release profile (LTO, codegen-units=1, opt-level=3)

      --overflow-checks
          Keep arithmetic overflow checks enabled in the production profile.
          
          By default `pina build` disables them so overflow wraps instead of panicking. Pass this flag when a program must fail loudly on overflow. It costs a small amount of size.

      --verify
          Build deterministically with solana-verify and Docker instead of Cargo directly

      --solana-verify <COMMAND>
          solana-verify 0.5.1 executable. Pina does not install it automatically

  -h, --help
          Print help (see a summary with '-h')

Examples:
  pina build
  pina build --verify
  pina build --verify --features logs --no-default-features
  pina build --project ./programs/counter

Verified builds:
  --verify switches the compiler backend to solana-verify 0.5.1. Install that exact version and start Docker first. Pina never installs tools. This creates a deterministic build; it does not compare with an on-chain program.

Project discovery:
  Pina searches from --project (or the current directory) toward the filesystem root for pina.toml. Existing Cargo projects without pina.toml are discovered with cargo metadata. CARGO_TARGET_DIR is respected.

----- stderr -----
