crates/pina_cli/tests/snapshots/cli_snapshots__codama_generate_invalid_argument_error.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
info:
  program: pina
  args:
    - codama
    - generate
    - "--example"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: a value is required for '--example <NAME>' but none was supplied

For more information, try '--help'.
