crates/pina_cli/tests/snapshots/cli_snapshots__codama_generate_missing_examples_path_error.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
assertion_line: 211
info:
  program: pina
  args:
    - codama
    - generate
    - "--examples-dir"
    - target/cli-snapshot-temp/codama_generate_missing_examples/missing_examples
    - "--idls-dir"
    - target/cli-snapshot-temp/codama_generate_missing_examples/idls
    - "--rust-out"
    - target/cli-snapshot-temp/codama_generate_missing_examples/rust
    - "--js-out"
    - target/cli-snapshot-temp/codama_generate_missing_examples/js
    - "--dart-out"
    - target/cli-snapshot-temp/codama_generate_missing_examples/dart
    - "--npx"
    - target/cli-snapshot-temp/codama_generate_missing_examples/fake-npx.sh
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[1m[31mError[39m[0m Failed to read examples directory at target/cli-snapshot-temp/codama_generate_missing_examples/missing_examples: No such file or directory (os error 2)
