crates/pina_cli/tests/snapshots/cli_snapshots__codama_generate_success_output.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
info:
  program: pina
  args:
    - codama
    - generate
    - "--examples-dir"
    - examples
    - "--idls-dir"
    - target/cli-snapshot-temp/codama_generate_success/idls
    - "--rust-out"
    - target/cli-snapshot-temp/codama_generate_success/rust
    - "--cpi-out"
    - target/cli-snapshot-temp/codama_generate_success/cpi
    - "--js-out"
    - target/cli-snapshot-temp/codama_generate_success/js
    - "--dart-out"
    - target/cli-snapshot-temp/codama_generate_success/dart
    - "--example"
    - counter_program
    - "--npx"
    - target/cli-snapshot-temp/codama_generate_success/fake-npx.sh
---
success: true
exit_code: 0
----- stdout -----
[32m✔[39m Generated Codama IDLs and Rust/CPI/JavaScript/Dart clients for 1 example(s): counter_program

----- stderr -----
warning: projects normally need one CLI; generating cli-rust, cli-ts, cli-dart anyway
