crates/pina_cli/tests/snapshots/cli_snapshots__codama_generate_unknown_example_error.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
info:
  program: pina
  args:
    - codama
    - generate
    - "--examples-dir"
    - examples
    - "--idls-dir"
    - target/pina-cli-snapshot-temp/codama_generate_unknown_example/idls
    - "--rust-out"
    - target/pina-cli-snapshot-temp/codama_generate_unknown_example/rust
    - "--js-out"
    - target/pina-cli-snapshot-temp/codama_generate_unknown_example/js
    - "--dart-out"
    - target/pina-cli-snapshot-temp/codama_generate_unknown_example/dart
    - "--example"
    - does_not_exist
    - "--npx"
    - target/pina-cli-snapshot-temp/codama_generate_unknown_example/fake-npx.sh
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[1m[31mError[39m[0m Unknown example `does_not_exist`. Available examples: account_realloc_program, compact_accounts_program, counter_program, custom_errors_program, declare_id_program, declare_program, duplicate_mutable_accounts_program, escrow_program, events_program, float_accounts_program, hello_solana_program, migrations_program, multisig_program, optional_accounts_program, pina_bpf_program, profile_program, prop_amm_program, role_registry_program, staking_rewards_program, system_accounts_program, sysvar_checks_program, todo_program, transfer_sol_program, validation_program, vesting_program
